backend/k8s/nr-back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nurim-back-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nurim-back
  template:
    metadata:
      labels:
        app: nurim-back
    spec:
      containers:
        - name: nurim-back
          image: pudingles94/project-nurim:nurim-back
          volumeMounts:
            - name: user-dic
              mountPath: /usr/dic
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
      volumes:
        - name: user-dic
          hostPath:
            path: /home/ubuntu/dic
      imagePullSecrets:
        - name: my-secret
