backend/k8s/nr-back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nurim-back-service
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8080
  selector:
    app: nurim-back
  type: NodePort
